CREATE TABLE "public"."vehicles" ("id" serial NOT NULL, "brand" text NOT NULL, "model" text NOT NULL, "plate" text NOT NULL, "color" text NOT NULL, "parking_slot_id" integer NOT NULL, "owner_id" uuid NOT NULL, PRIMARY KEY ("id") , FOREIGN KEY ("parking_slot_id") REFERENCES "public"."parking_slots"("id") ON UPDATE restrict ON DELETE cascade, FOREIGN KEY ("owner_id") REFERENCES "public"."owners"("id") ON UPDATE restrict ON DELETE cascade, UNIQUE ("plate"));COMMENT ON TABLE "public"."vehicles" IS E'Vehicle data';
