// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
// https://dbdiagram.io/d/6476c7767764f72fcf24e65b

// Parking data
Table buildings {
  id integer [pk]
  name text unique
  created_at timestamp
  updated_at timestamp
}

Table owners {
  id uuid [pk]
  first_name text
  last_name text
  ci text unique
  phone text
  phone_1 text [null]
  email text [null]
  building_id integer
  floor text
  apto text
  created_at timestamp
  updated_at timestamp
}

Table locations {
  id integer [pk]
  name text
  description text [null]
  has_parking_slots bool
  has_storages bool
}

Table parking_slots {
  id integer [pk]
  code text unique
  location_id integer
  owner_id uuid [null]
  renter_id uuid [null]
  qr_code uuid unique
  created_at timestamp
  updated_at timestamp
}

Table vehicles {
  id integer [pk]
  brand text
  model text
  plate text unique
  color text
  parking_slot_id integer
  owner_id uuid
  created_at timestamp
  updated_at timestamp
}

Table storages {
  id integer [pk]
  code text unique
  location_id integer
  owner_id uuid [null]
  renter_id uuid [null]
  qr_code uuid unique
  created_at timestamp
  updated_at timestamp
}

// -- System data
Table roles {
  id integer [pk]
  name text
  code text
}


Table users {
  id uuid [pk]
  first_name text
  last_name text
  ci text unique
  phone text
  role_id integer
  password text
  created_at timestamp
  updated_at timestamp
}

// Refs
Ref: "parking_slots"."owner_id" < "owners"."id"
  
Ref: "vehicles"."parking_slot_id" < "parking_slots"."id"
Ref: "vehicles"."owner_id" < "owners"."id"

Ref: "owners"."building_id" < "buildings"."id"

Ref: "users"."role_id" < "roles"."id"


Ref: "storages"."owner_id" < "owners"."id"

Ref: "storages"."renter_id" < "owners"."id"

Ref: "parking_slots"."renter_id" < "owners"."id"

Ref: "storages"."location_id" < "locations"."id"

Ref: "parking_slots"."location_id" < "locations"."id"